# pass

./: .gitignore  .gitmodules  Makefile  setup.cfg
includes/: attr.h
src/: main.c
src/sg_pass/: __init__.py  __main__.py  security.py
src/sg_pass/ui/: __init__.py  screen.py  tui.py
