[metadata]
name = sg_pass
version = 0.0.1
description = Minimal TUI Password Manager
long_description_content_type = text/markdown
author = Sigmanificient
keywords = password manager
platform = unix, linux, osx, windows
project_urls =
    Github repository=https://github.com/Sigmanificient/pass
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages =
    sg_pass
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    p = sg_pass.__main__:main
